# PyServe

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.docker.yaml  config_v2_example.yaml  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml  requirements.txt  roadmap.md  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-and-release.yml
config/extensions/: security.yaml
pyserve/: __init__.py  cli.py  configuration.py  configure.py  logging.py  server.py  template.py  utils.py
pyserve/configuration/: __init__.py  configure.py  test_configuration.py
pyserve/core/: __init__.py
pyserve/core/config/: __init__.py  loader.py  validator.py
pyserve/core/exceptions/: __init__.py  configuration.py
pyserve/core/extensions/: __init__.py  base.py  registry.py  routing.py
pyserve/core/logging/: __init__.py  formatters.py  handlers.py  logger.py
pyserve/http/: __init__.py  request.py  response.py
pyserve/template/: __init__.py  engine.py
pyserve/testing/: __init__.py  config_tests.py
pyserve/utils/: __init__.py  helpers.py
pyserve/vibe/: cache.py  llm.py  service.py  vibe_config.py
static/: docs.html  index.html
static/css/: styles.css
static/js/: docs.js
static/pages/: api.html  authentication.html  configuration.html  deployment.html  getting-started.html  logging.html  redirects.html  reverse-proxy.html  secure.html  static-files.html  templates.html  testing.html  vibe-serving.html
templates/: error_404.html  error_502.html  error_504.html  errors.html  vibe_error.html
(+13 files in other folders)
