[project]
name = "pyserve"
version = "0.5.0"
description = "Modern, async HTTP server written in Python"
authors = [
    {name = "github.com/ShiftyX1"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiohappyeyeballs (>=2.6.1,<3.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "aiosignal (>=1.3.2,<2.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "frozenlist (>=1.6.0,<2.0.0)",
    "idna (>=3.10,<4.0)",
    "multidict (>=6.4.3,<7.0.0)",
    "propcache (>=0.3.1,<0.4.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "yarl (>=1.20.0,<2.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pyserve = "pyserve.cli:main"
